how-it-works | experts-advice

--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -7,11 +7,13 @@ $gray: #777777;
 $gray2: #4d4d4d;
 $gray3: #888888;
 $gray4: #808080;
+$gray5: #353535;
 $lgray: #b1aca8;
 $lgray2: #c3c3c3;
 $lgray3: #e9e7e7;
 $lgray4: #eee;
 $lgray5: #ddd;
+$lgray6: #f2f4f5;
 $orange: #eb8f2e;
 $orange2: #ff8f00;
 $orange3: #f88729;
@@ -24,6 +26,7 @@ $green3: #018077;
 $blue: #2879fe;
 $blue2: #2689de;
 $lblue: #2ea4eb;
+$lblue3: #2ea5ea;
 $rose: #c3416c;
 $redburn: #dc3232;
 
