--- a/assets/css/custom-editor-style.css
+++ b/assets/css/custom-editor-style.css
@@ -37,7 +37,8 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: auto;
 }
 
-.wp-block-button > .wp-block-button__link {
+.wp-block-button > .wp-block-button__link,
+.btn-orange {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -57,13 +58,15 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #008077;
 }
 
-.wp-block-button.is-style-outline > .wp-block-button__link {
+.wp-block-button.is-style-outline > .wp-block-button__link,
+.btn-orange {
     color: #f88729;
     background-color: #fff;
     border-color: #f88729;
 }
 
-.wp-block-button.is-style-outline > .wp-block-button__link:hover {
+.wp-block-button.is-style-outline > .wp-block-button__link:hover,
+.btn-orange:hover {
     color: #008077;
     border-color: #008077;
 }
