--- a/blocks/how-it-works/style.scss
+++ b/blocks/how-it-works/style.scss
@@ -13,6 +13,10 @@
         background-size: cover;
     }
 
+    .heading {
+        color: $green3;
+    }
+
     .steps {
         counter-reset: steps;
 
