--- a/assets/css/custom-editor-style.css
+++ b/assets/css/custom-editor-style.css
@@ -65,6 +65,16 @@ h1, h2, h3, h4, h5, h6 {
     border-color: #f88729;
 }
 
+.wp-block-button.is-style-btn-green > .wp-block-button__link {
+    color: #fff;
+    background-color: #008077;
+}
+
+.wp-block-button.is-style-btn-green > .wp-block-button__link:hover {
+    color: #fff;
+    background-color: #4d4d4d;
+}
+
 .wp-block-button.is-style-outline > .wp-block-button__link:hover,
 .btn-orange:hover {
     color: #008077;
