--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -8,6 +8,7 @@ $gray2: #4d4d4d;
 $gray3: #888888;
 $gray4: #808080;
 $gray5: #353535;
+$gray6: #a9a9a9;
 $lgray: #b1aca8;
 $lgray2: #c3c3c3;
 $lgray3: #e9e7e7;
