--- a/blocks/image-text-content/style.scss
+++ b/blocks/image-text-content/style.scss
@@ -16,7 +16,7 @@
             padding-top: 40px;
             padding-right: 30px;
             font-size: 18px;
-            color: $gray;
+            color: $gray6;
             text-align: right;
         }
     }
