--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -151,7 +151,7 @@ textarea {
 }
 
 .senior-dog-form {
-    .acf-innerblocks-container {
+    .col-content .acf-innerblocks-container {
         padding: 0;
     }
 
@@ -162,7 +162,8 @@ textarea {
 
         form {
             padding: 30px 55px;
-            margin: 0;
+            margin: 0 0 30px;
+            color: $gray;
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
             background-color: $white;
             border: 0;
@@ -170,7 +171,143 @@ textarea {
         }
 
         #mc_embed_signup_scroll {
+            position: relative;
             padding-right: 50px;
+
+            &:after {
+                content: '';
+                position: absolute;
+                top: 5px;
+                right: 0;
+                width: 60px;
+                height: 60px;
+                background: url('../images/arrow.png') no-repeat;
+                background-size: contain;
+            }
+        }
+
+        h2 {
+            font-size: 34px;
+        }
+
+        .mc-field-group {
+            width: 100%;
+
+            input {
+                padding: 8px 15px;
+                width: 100%;
+                color: $gray;
+                text-indent: 0;
+                background-color: $lgray6;
+                border: 0;
+                border-radius: 10px;
+
+                @include placeholder() {
+                    font-weight: 400;
+                    color: $gray;
+                }
+            }
+
+            select {
+                padding: 8px 32px 8px 15px;
+                width: 100%;
+                font-style: italic;
+                color: $gray;
+                background: $lgray6 url('../icons/down-arrow.svg') no-repeat center right 15px;
+                background-size: 15px;
+                border: 0;
+                border-radius: 10px;
+            }
+
+            &.size1of2 {
+                margin-right: 0;
+                width: 100%;
+            }
+
+            .datefield {
+                padding: 8px 15px;
+                background: $whitelilac;
+                border-radius: 10px;
+
+                .small-meta {
+                    font-family: 'Hind', sans-serif;
+                    font-size: 16px;
+                    font-style: italic;
+                    font-weight: 400;
+                    color: $gray;
+                }
+
+                input {
+                    padding: 0;
+                    width: auto;
+                    min-width: 30px;
+                    min-height: 34px;
+                    letter-spacing: 0;
+                    background: transparent;
+                    border-radius: 0;
+                    border: 0;
+                }
+            }
+
+            .custom-form-one {
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+                grid-gap: 15px;
+                padding: 0;
+                margin: 15px 0;
+                list-style: none;
+
+                .senior-dog-checkbox {
+                    input {
+                        display: none;
+
+                        &:checked + label {
+                            border-color: $green2;
+
+                            &:before {
+                                opacity: 1;
+                            }
+                        }
+                    }
+
+                    label {
+                        position: relative;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 100%;
+                        height: 100%;
+                        padding: 16px 15px;
+                        font-family: 'Signika', sans-serif;
+                        font-weight: 400;
+                        font-size: 14px;
+                        line-height: 17px;
+                        color: $gray;
+                        text-align: center;
+                        border: solid 1px $gray6;
+                        cursor: pointer;
+
+                        &::before {
+                            content: '';
+                            position: absolute;
+                            top: 5px;
+                            right: 10px;
+                            width: 6px;
+                            height: 14px;
+                            border: solid $green2;
+                            border-width: 0 2px 2px 0;
+                            border-radius: 0;
+                            transform: rotate(45deg);
+                            opacity: 0;
+                        }
+                    }
+                }
+            }
+        }
+
+        .button {
+            @extend .btn-orange;
+            width: 100%;
         }
     }
 }
