--- a/blocks/image-text-content/style.scss
+++ b/blocks/image-text-content/style.scss
@@ -68,6 +68,18 @@
         }
     }
 
+    @include respond-to(md-up) {
+        &.alignfull {
+            .image-left {
+                margin-right: 0;
+            }
+
+            .image-right {
+                margin-left: 0;
+            }
+        }
+    }
+
     @include respond-to(xl) {
         &.alignfull:not(.fullwidth-text) {
             .image-left .col-content {
@@ -87,10 +99,20 @@
         
         .col-image {
             order: 2;
+
+            .subtext {
+                padding: 40px 15px 0;
+                color: $gray6;
+            }
         }
 
         .acf-innerblocks-container {
-            padding: 50px 0;
+            padding: 50px 12px;
+        }
+
+        &.alignfull .acf-innerblocks-container {
+            padding-right: 24px;
+            padding-left: 24px;
         }
     }
 }
