testimonials image width

--- a/blocks/testimonials/style.scss
+++ b/blocks/testimonials/style.scss
@@ -10,6 +10,7 @@
         .image {
             display: block;
             margin: 0 auto 40px;
+            max-width: 580px;
         }
 
         .quote-icon {
