CPT Community - Archive page

--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -2,6 +2,8 @@
 $primary: #005f58;
 $white: #ffffff;
 $whitelilac: #f7f8fa;
+$whitepale: #fafdff; 
+$whiteflash: #f1f4f7;
 $black: #000000;
 $gray: #777777;
 $gray2: #4d4d4d;
