--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -23,6 +23,11 @@ hr {
     opacity: 1;
 }
 
+.container-fluid-custom {
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
 // @media screen and (min-width: 576px) {
 //     .container {
 //         max-width: 546px;
