--- a/assets/scss/base/_fonts.scss
+++ b/assets/scss/base/_fonts.scss
@@ -1,2 +1,4 @@
 
 @include font-face('wokiee_icons', $base-url + 'fonts/', 'wokiee_icons', 'wokiee_icons');
+@include font-face('terfens', $base-url + 'fonts/', 'terfens', 'terfens');
+@include font-face('terfens-bold', $base-url + 'fonts/', 'terfens-bold', 'terfens-bold');
