--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -12,6 +12,10 @@ body a:where(:not(.wp-element-button)) {
     }
 }
 
+:root body :where(a:where(:not(.wp-element-button))) {
+    text-decoration: none;
+}
+
 h1, h2, h3, h4, h5, h6 {
     margin-bottom: 20px;
     font-family: 'Signika', sans-serif;
