--- a/assets/scss/layout/_icon-banner.scss
+++ b/assets/scss/layout/_icon-banner.scss
@@ -12,6 +12,10 @@
         display: flex;
         align-items: center;
 
+        a {
+            text-decoration: none;
+        }
+
         .icon {
             margin-right: 15px;
             width: 50px;
