--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -47,6 +47,8 @@
 
 input[type="text"],
 input[type="email"],
+input[type="tel"],
+input[type="number"],
 select,
 textarea {
     @extend %user-input;
