--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 20px;
     font-family: 'Signika', sans-serif;
     font-weight: 600;
-    color: $primary;
+    color: $green2;
 }
 
 h1 {
