Community Pages: Category Page, Single Post, Search Results

--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -5,6 +5,7 @@ $whitelilac: #f7f8fa;
 $whitepale: #fafdff; 
 $whiteflash: #f1f4f7;
 $black: #000000;
+$blackx: #202327;
 $gray: #777777;
 $gray2: #4d4d4d;
 $gray3: #888888;
@@ -26,8 +27,11 @@ $aliceblue: #f7f8fa;
 $dark: #191919;
 $green2: #008077;
 $green3: #018077;
+$greenwhatsapp: #25d366;
 $blue: #2879fe;
 $blue2: #2689de;
+$bluefacebook: #3b5998;
+$bluelinkedin: #0077b5;
 $lblue: #2ea4eb;
 $lblue3: #2ea5ea;
 $rose: #c3416c;
