--- a/assets/scss/pages/_archive-community.scss
+++ b/assets/scss/pages/_archive-community.scss
@@ -1,22 +1,32 @@
 
-.post-type-archive {
+.archive {
     .page-archive-heading {
         margin: 50px 0 30px;
         font-family: 'terfens';
         font-weight: 600;
         color: $green2;
         text-align: center;
+
+        .searched-word {
+            font-weight: 400;
+        }
     }
 
-    .page-archive-description * {
-        font-family: 'terfens';
-        font-size: 20px;
-        color: $gray;
-        text-align: center;
+    .page-archive-description {
+        * {
+            font-family: 'terfens';
+            font-size: 20px;
+            color: $gray;
+            text-align: center;
+        }
+
+        a {
+            font-weight: 600;
+            color: $green2;
+        }
     }
 
     .categories {
-        // margin: 40px 0 70px;
         margin: 40px 0;
         position: relative;
     }
@@ -82,6 +92,10 @@
         &.show {
             height: 60px;
             opacity: 1;
+
+            .search-field {
+                pointer-events: all;
+            }
         }
 
         .search-form {
@@ -104,6 +118,7 @@
             opacity: .6;
             outline: none;
             transition: .2s ease-in-out all;
+            pointer-events: none;
 
             &::-webkit-search-decoration,
             &::-webkit-search-cancel-button,
@@ -190,6 +205,10 @@
         font-size: 12px;
         color: $gray5;
         opacity: .6;
+    }
+
+    .container.no-result {
+        margin-bottom: 50px;
     }
 
     @media (max-width: 767px) {
