CPT Community/News

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -32,5 +32,6 @@
 // 6. Pages
 @import
   'pages/archive-community',
-  'pages/single-community';
+  'pages/single-community',
+  'pages/archive-news';
   
