--- a/assets/scss/pages/_archive-news.scss
+++ b/assets/scss/pages/_archive-news.scss
@@ -1,9 +1,9 @@
 
-.archive {
-    .container-fluid-custom {
-        padding-bottom: 50px;
+.post-type-archive-news {
+    .vk-icon-banner:before {
+        display: none;
     }
-    
+
     .page-archive-heading {
         margin: 50px 0 30px;
         font-family: 'terfens';
@@ -30,12 +30,85 @@
         }
     }
 
+    .row-posts {
+        position: relative;
+        padding-top: 50px;
+        padding-bottom: 50px;
+
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            margin: 0 auto;
+            width: 48%;
+            height: 2px;
+            background-color: $lgray;
+        }
+
+        .text {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 100%;
+            padding: 0 10px;
+        }
+
+        .post-title {
+            margin-bottom: 20px;
+        }
+
+        .post-link {
+            margin-bottom: 0;
+            color: $green2;
+            background-color: transparent;
+            border: none;
+
+            &:hover {
+                background: transparent;
+                text-decoration: underline;
+            }
+        }
+
+        .excerpt {
+            * {
+                text-align: center;
+            }
+
+            p {
+                margin-bottom: 20px;
+            }
+        }
+
+        .image {
+            display: flex;
+            justify-content: center;
+            height: 100%;
+        }
+
+        .post-image {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 0;
+        }
+
+        .featured-image {
+            width: auto;
+            max-width: 100%;
+            height: auto;
+            max-height: 400px;
+            border-radius: 10px;
+        }
+    }
+
     .categories {
         margin: 40px 0;
         position: relative;
     }
 
-    .community-categories-list {
+    .news-categories-list {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -172,7 +245,6 @@
         display: flex;
         flex-direction: column;
         overflow: hidden;
-        margin-bottom: 25px;
         text-align: center;
         background-color: $whitepale;
         border: 1px solid $lgray3;
@@ -185,18 +257,18 @@
         }
     }
 
-    .featured-image {
-        object-fit: cover;
-        object-position: top;
-        width: 100%;
-        max-height: 400px;
-    }
+    // .featured-image {
+    //     object-fit: cover;
+    //     object-position: top;
+    //     width: 100%;
+    //     max-height: 400px;
+    // }
 
-    .details {
-        display: flex;
-        flex-direction: column;
-        padding: 20px;
-    }
+    // .details {
+    //     display: flex;
+    //     flex-direction: column;
+    //     padding: 20px;
+    // }
 
     .post-title {
         margin-bottom: 10px;
@@ -215,7 +287,40 @@
         margin-bottom: 50px;
     }
 
+    @media (min-width: 768px) {
+        .row-posts:nth-child(odd) {
+            .col-12:first-child {
+                order: 2;
+            }
+
+            .col-12:last-child {
+                order: 1;
+            }
+        }
+    }
+
     @media (max-width: 767px) {
+        .row-posts {
+            .col-12:first-child {
+                order: 2;
+            }
+
+            .col-12:last-child {
+                order: 1;
+            }
+
+            .image {
+                height: auto;
+                margin-bottom: 50px;
+            }
+
+            .excerpt {
+                p:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+
         .search-wrapper {
             .search-form label {
                 width: calc(100% - 40px);
