--- a/assets/scss/pages/_single-community.scss
+++ b/assets/scss/pages/_single-community.scss
@@ -163,6 +163,23 @@
             text-decoration: underline;
         }
 
+        .featured-image-wrapper {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            & + .single-post-heading {
+                margin-top: 30px;
+            }
+        }
+
+        .featured-image {
+            width: auto;
+            max-width: 100%;
+            height: auto;
+            max-height: 500px;
+        }
+
         .single-post-heading {
             margin: 10px 0;
             font-family: 'terfens';
@@ -185,19 +202,6 @@
             opacity: .6;
         }
 
-        .featured-image-wrapper {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .featured-image {
-            width: auto;
-            max-width: 100%;
-            height: auto;
-            max-height: 500px;
-        }
-
         img:not(.featured-image) {
             border: 10px solid $whitelilac;
             border-radius: 10px;
@@ -211,7 +215,7 @@
 
     .share-buttons {
         display: flex;
-        margin: 10px 0;
+        margin: 50px 0 10px;
 
         a {
             display: flex;
