--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -20,7 +20,8 @@
 @import
   'components/button',
   'components/back-to-top',
-  'components/form';
+  'components/form',
+  'components/loader';
 
   // 5. Layout-related sections
   @import
