--- a/blocks/calorie-calculator/style.scss
+++ b/blocks/calorie-calculator/style.scss
@@ -6,7 +6,7 @@
     padding: 50px 72px 170px;
     margin-bottom: 50px;
     background: $lgreen url('../../assets/images/calculator/bg-img.webp') no-repeat bottom;
-    background-size: contain;
+    background-size: 100% auto;
     border-radius: 40px;
     
     .custom-row {
