--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -34,5 +34,7 @@
 @import
   'pages/archive-community',
   'pages/single-community',
-  'pages/archive-news';
+  'pages/archive-news',
+  'pages/single-products',
+  'pages/shop';
   
