CPT News adjustments

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -35,6 +35,7 @@
   'pages/archive-community',
   'pages/single-community',
   'pages/archive-news',
+  'pages/single-news',
   'pages/single-products',
   'pages/shop';
   
