--- a/assets/css/custom-editor-style.css
+++ b/assets/css/custom-editor-style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Signika:100,200,300,400,500,600,700,800,900&family=Hind:100,200,300,400,500,600,700,800,900&display=swap');
 
+:root {
+	padding-bottom: 100px;
+}
+
 *,
 *::after,
 *::before {
@@ -99,4 +103,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .order-2 {
     order: 2;
+}
+
+.wp-block-widget-group.has-child-selected > * {
+    position: relative;
+    z-index: 1;
 }
