--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -20,35 +20,31 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 20px;
     font-family: 'Signika', sans-serif;
     font-weight: 600;
+    line-height: 1.3;
     color: $green2;
 }
 
 h1 {
     font-size: 48px;
-    line-height: 54px;
+    line-height: 1.14;
 }
 
 h2 {
     font-size: 34px;
-    line-height: 44px;
 }
 
 h3 {
     font-size: 30px;
-    line-height: 40px;
 }
 
 h4 {
     font-size: 24px;
-    line-height: 34px;
 }
 
 h5 {
     font-size: 20px;
-    line-height: 30px;
 }
 
 h6 {
     font-size: 16px;
-    line-height: 26px;
 }
