--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -59,6 +59,10 @@ textarea {
 }
 
 select {
+    background-image: url('../icons/down-arrow.svg');
+    background-repeat: no-repeat;
+    background-position: center right 15px;
+    background-size: 15px;
     appearance: none;
     cursor: pointer;
 }
@@ -220,8 +224,7 @@ textarea {
                 width: 100%;
                 font-style: italic;
                 color: $gray;
-                background: $lgray6 url('../icons/down-arrow.svg') no-repeat center right 15px;
-                background-size: 15px;
+                background-color: $lgray6;
                 border: 0;
                 border-radius: 10px;
             }
