--- a/assets/scss/pages/_single-products.scss
+++ b/assets/scss/pages/_single-products.scss
@@ -79,8 +79,7 @@
             }
 
             select {
-                background: $lgray6 url('../icons/down-arrow.svg') no-repeat center right 15px;
-                background-size: 15px;
+                background-color: $lgray6;
             }
 
             .quantity {
@@ -208,6 +207,20 @@
 
                 &--description h2 {
                     display: none;
+                }
+            }
+        }
+
+        &.product-type-simple {
+            form {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+
+                .single_add_to_cart_button {
+                    @extend .btn-orange;
+                    flex: 1;
+                    text-transform: uppercase;
                 }
             }
         }
