--- a/assets/scss/layout/_popup.scss
+++ b/assets/scss/layout/_popup.scss
@@ -22,6 +22,10 @@ body .woosq-popup {
                     display: none !important;
                 }
             }
+
+            .bos4w-display-wrap {
+                display: none;
+            }
         }
     }
 
