--- a/assets/scss/pages/_cart-checkout.scss
+++ b/assets/scss/pages/_cart-checkout.scss
@@ -1,15 +1,29 @@
 
 .woocommerce-page {
-    &.woocommerce-cart {
-        main {
-            padding-top: 50px;
-            padding-bottom: 50px;
-        }
+    .restricted-zone-message {
+        display: none;
+        padding: 15px;
+        width: 100%;
+        color: $gray;
+        background-color: $whitelilac;
+        border: 1px solid $rose;
 
-        .wp-block-woocommerce-cart-totals-block {
-            .wc-block-cart__submit-button {
+        & > *:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    &.woocommerce-cart {
+        .select2-container--default {
+            .select2-search--dropdown .select2-search__field {
+                min-height: 40px;
+            }
+        }
+        
+        .wc-proceed-to-checkout {
+            a.checkout-button {
                 @extend .btn-orange;
-                margin-top: 30px;
+                width: 100%;
                 text-transform: uppercase;
             }
         }
@@ -51,29 +65,247 @@
             }
         }
 
-        .wc-block-cart__empty-cart__title {
-            &:before {
-                content: "\e98e";
-                margin: 0;
-                width: auto;
-                height: auto;
-                font-family: 'wokiee_icons' !important;
-                font-size: 150px;
-                font-weight: 400;
-                color: #ebecee;
+        table.shop_table {
+            .product-price,
+            .product-quantity,
+            .product-subtotal {
                 text-align: center;
-                background: none;
-                mask: none;
+            }
+
+            .product-remove {
+                text-align: right;
+
+                svg {
+                    width: 15px;
+                    height: 15px;
+
+                    path {
+                        fill: $green2;
+                    }
+                }
+
+                a:hover {
+                    background: none;
+                }
+            }
+
+            .product-quantity {
+                .qty {
+                    padding: 5px 10px;
+                    margin: auto;
+                    width: 120px;
+                    min-height: 40px;
+                }
+            }
+
+            .woocommerce-cart-form__cart-item {
+                .product-name a {
+                    color: $green2;
+                }
+
+                .product-price,
+                .product-subtotal {
+                    font-weight: 600;
+                    color: $green2;
+                }
+            }
+
+            .coupon {
+                display: none !important;
+            }
+
+            .actions button[name="update_cart"] {
+                display: inline-block;
+                padding: 8px 15px;
+                font-family: 'Signika', sans-serif;
+                font-weight: 500;
+                color: $white;
+                text-transform: uppercase;
+                background-color: $green2;
+            }
+        }
+
+        .wc-empty-cart-message {
+            display: none;
+        }
+
+        .cart-title {
+            margin-bottom: 30px;
+            font-size: 34px;
+            text-align: center;
+            text-transform: uppercase;
+        }
+
+        .empty-cart {
+            padding-bottom: 50px;
+            text-align: center;
+
+            &__title {
+                margin-bottom: 0;
+                font-size: 34px;
+    
+                &:before {
+                    content: "\e98e";
+                    display: block;
+                    font-family: 'wokiee_icons' !important;
+                    font-size: 150px;
+                    font-weight: 400;
+                    color: #ebecee;
+                }
+            }
+
+            .btn-orange {
+                margin-top: 30px;
+                text-transform: uppercase
+            }
+        }
+
+        .cart_totals {
+            h2 {
+                font-size: 20px;
+                text-transform: uppercase;
+            }
+
+            input[type="text"] {
+                min-height: 40px;
+                border-radius: 0;
+            }
+
+            .form-row {
+                padding: 0;
+            }
+
+            .shipping-calculator-button {
+                color: $green2;
+
+                &:after {
+                    display: none;
+                }
+            }
+
+            .select2-container--default {
+                .select2-selection--single {
+                    padding: 10px 20px;
+                    margin: 0;
+                    height: auto;
+                    background-color: $whitelilac;
+                    border: 0;
+                    border-radius: 0;
+    
+                    .select2-selection__arrow {
+                        top: 50%;
+                        right: 10px;
+                        transform: translateY(-50%);
+                    }
+    
+                    .select2-selection__rendered {
+                        font-size: 16px;
+                        color: $gray;
+                    }
+                }
+            }
+
+            .button {
+                @extend .btn-orange;
+                padding: 10px;
+                width: 100%;
+                min-height: 48px;
+                font-size: 18px;
+                text-transform: uppercase;
+                border-radius: 0;
+            }
+        }
+
+        .cart-notice {
+            position: relative;
+            padding: 15px;
+            margin-bottom: 20px;
+            width: 100%;
+            font-size: 15px;
+            font-weight: 600;
+            color: $white;
+            background-color: $orange4;
+            border-radius: 6px;
+
+            &:before {
+                content: '!';
+                position: absolute;
+                top: -15px;
+                left: -15px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 30px;
+                height: 30px;
+                font-size: 20px;
+                background-color: #2e98f3;
+                border-radius: 50%;
             }
         }
     }
 
     &.woocommerce-checkout {
-        .wc-block-checkout__actions {
-            .wc-block-components-checkout-place-order-button {
+        main {
+            padding-bottom: 100px;
+        }
+
+        .woocommerce-form-coupon-toggle {
+            display: none !important;
+        }
+
+        form.woocommerce-form-coupon {
+            display: flex !important;
+            flex-wrap: wrap;
+            color: $white;
+            background: $green2;
+            border: 0;
+
+            p:not(.form-row-first):not(.form-row-last) {
+                flex: 0 0 100%;
+                width: 100%;
+            }
+
+            .form-row-first {
+                flex: 0 0 70%;
+            }
+
+            .form-row-last {
+                flex: 0 0 30%;
+
+                .button {
+                    @extend .btn-orange;
+                    width: 100%;
+
+                    &:hover {
+                        color: $orange5;
+                        background-color: $white;
+                    }
+                }
+            }
+        }
+
+        #payment {
+            background: $pale;
+
+            #place_order {
                 @extend .btn-orange;
+                width: 100%;
                 text-transform: uppercase;
             }
+        }
+
+        #ship-to-different-address {
+            margin-top: 20px;
+            font-family: 'Hind', sans-serif;
+            font-size: 16px;
+            color: $gray;
+        }
+    }
+
+    @media screen and (min-width: 769px) {
+        .restricted-zone-message {
+            margin-left: auto;
+            width: 48%;
         }
     }
 }
