styling fixes | 404 | cart, checkout | woo pages

--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -49,6 +49,7 @@ input[type="text"],
 input[type="email"],
 input[type="tel"],
 input[type="number"],
+input[type="password"],
 select,
 textarea {
     @extend %user-input;
