--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -39,5 +39,7 @@
   'pages/single-news',
   'pages/single-products',
   'pages/shop',
-  'pages/cart-checkout';
+  'pages/cart-checkout',
+  'pages/login-register',
+  'pages/account';
   
