--- a/assets/scss/pages/_cart-checkout.scss
+++ b/assets/scss/pages/_cart-checkout.scss
@@ -13,6 +13,14 @@
         }
     }
 
+    .container > .wp-block-group:first-of-type {
+        padding-top: 0;
+
+        h1 {
+            margin-top: 30px;
+        }
+    }
+
     &.woocommerce-cart {
         .select2-container--default {
             .select2-search--dropdown .select2-search__field {
@@ -284,8 +292,113 @@
             }
         }
 
+        .woocommerce-checkout__sidebar {
+            padding: 20px;
+            background: rgba(152,222,190,.6);
+
+            h3 {
+                padding-bottom: 5px;
+                margin-bottom: 10px;
+                font-size: 24px;
+                color: $primary;
+                border-bottom: 2px solid $primary;
+            }
+        }
+
+        table.shop_table {
+            margin: 0 0 20px;
+            color: $primary;
+            border: 0;
+            border-radius: 0;
+            border-spacing: 0;
+
+            ul#shipping_method li:last-of-type {
+                margin-bottom: 0;
+            }
+
+            thead {
+                display: none;
+            }
+
+            td,th {
+                padding: 8px 0;
+                vertical-align: top;
+                border-color: $primary;
+
+                &:last-child {
+                    padding-left: 10px;
+                    text-align: right;
+                }
+            }
+            
+            tr.cart_item:first-of-type td {
+                border-top: 0;
+            }
+        }
+
         #payment {
-            background: $pale;
+            background: none;
+
+            div.payment_box {
+                flex: 0 0 100%;
+                background: $white !important;
+
+                &:before {
+                    top: auto;
+                    bottom: 100%;
+                    border-bottom-color: $white;
+                }
+            }
+
+            .wc-stripe_cc-new-method-container {
+                margin-bottom: 0;
+            }
+
+            .wc-stripe-bootstrap-form .row:last-of-type > *:last-of-type {
+                margin-bottom: 5px !important;
+            }
+
+            ul.payment_methods {
+                padding: 0;
+                color: $primary;
+                border-color: $primary;
+
+                li {
+                    display: flex;
+                    flex-wrap: wrap;
+
+                    input {
+                        margin-top: -2px;
+                        margin-right: 5px;
+                    }
+
+                    label {
+                        flex: 1;
+                        font-weight: 500;
+
+                        .wc-stripe-card-icons-container {
+                            float: none;
+
+                            img:first-child {
+                                margin-left: 0;
+                            }
+                        }
+
+                        img {
+                            float: none !important;
+                        }
+                    }
+                }
+            }
+
+            .place-order {
+                padding: 15px 0 0;
+                color: $black;
+
+                a {
+                    color: $primary;
+                }
+            }
 
             #place_order {
                 @extend .btn-orange;
@@ -300,6 +413,14 @@
             font-size: 16px;
             color: $gray;
         }
+    }
+
+    div#cart-checkout-notice {
+        padding: 15px;
+        margin-bottom: 20px;
+        font-size: 16px;
+        color: $gray2;
+        background: rgba(152, 222, 190, .6);
     }
 
     @media screen and (min-width: 769px) {
