--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -29,7 +29,8 @@
     'layout/footer',
     'layout/icon-banner',
     'layout/gutenberg',
-    'layout/popup';
+    'layout/popup',
+    'layout/mobile-nav-popups';
 
 // 6. Pages
 @import
