--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -157,6 +157,11 @@ textarea {
     }
 }
 
+#mc_embed_signup #mc-embedded-subscribe-form .mc-field-group div.mce_inline_error {
+    margin-bottom: 0;
+    background: none;
+}
+
 .senior-dog-form {
     .col-content .acf-innerblocks-container {
         padding: 0;
@@ -319,6 +324,25 @@ textarea {
         .button {
             @extend .btn-orange;
             width: 100%;
+        }
+    }
+}
+
+.home-newsletter {
+    margin: 0 auto;
+    max-width: 680px;
+
+    #mc-embedded-subscribe-form {
+        .d-flex {
+            gap: 10px;
+        }
+
+        .mc-field-group input {
+            border-radius: 20px;
+        }
+
+        #mc-embedded-subscribe {
+            @extend .btn-orange;
         }
     }
 }
